# Database-Project

./: CMakeLists.txt  DataLoader.cpp  DataLoader.h  Database.cpp  Database.h  Date.cpp  Date.h  DayFunction.cpp  DayFunction.h  Decomposer.cpp  Decomposer.h  Function.cpp  Function.h  LeftFunction.cpp  LeftFunction.h  LenFunction.cpp  LenFunction.h  MaxFunction.cpp  MaxFunction.h  MeanFunction.cpp  MeanFunction.h  MinFunction.cpp  MinFunction.h  ModFunction.cpp  ModFunction.h  MonthFunction.cpp  MonthFunction.h  README.md  RightFunction.cpp  RightFunction.h  Row.cpp  Row.h  SortFunction.cpp  SortFunction.h  SumFunction.cpp  SumFunction.h  Tests.cpp  Validator.cpp  Validator.h  YearFunction.cpp  (+4 more)
